# la_fungus_search

./: ._env.example  .env  .env.example  .gitignore  AUTONOMOUS_EXPLORATION_IMPLEMENTATION.md  BOOTSTRAP_IMPLEMENTATION.md  CONTRIBUTING.md  EXPLORATION_QUICK_START.md  FIXES_CRITICAL_ISSUES.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INDEXING_ISSUE.md  LANGCHAIN_MEMORY_AGENT_COMPLETE.md  LANGCHAIN_MEMORY_AGENT_PHASE1.md  LANGCHAIN_MEMORY_AGENT_PHASE2.md  LANGCHAIN_MEMORY_AGENT_PHASE3.md  LICENSE  MCMP_SUITE_OVERVIEW.md  MCP_SETUP_GUIDE.md  MEMORY_AGENT_DIAGNOSTICS.md  MEMORY_AGENT_TESTS.md  MEMORY_MANAGER_AGENT.md  README.md  READY_TO_USE.md  ROOM_EXPLORATION.md  SUPERMEMORY_FIXES.md  SUPERMEMORY_FIX_SUMMARY.md  SUPERMEMORY_INTEGRATION.md  SUPERMEMORY_OPTIMIZATIONS.md  _.env.example  all_configurable_values.py  check_collection.py  complete_configurable_values.py  config_playground_reference.py  docker-compose.qdrant.yml  index_codebase.py  index_to_qdrant.py  pyproject.toml  pytest.ini  requirements-dev.txt  (+15 more)
.fungus_cache/chunks/: .._sakana-desktop-assistant_src___init__.py.db54e9a2200a91db7a9c236ac3216047eeb7caa0.100.jsonl  .._sakana-desktop-assistant_src___init__.py.db54e9a2200a91db7a9c236ac3216047eeb7caa0.4000.jsonl  .._sakana-desktop-assistant_src_core___init__.py.23238adf63f7dc3ee2c284d7c034196de6cce721.100.jsonl  .._sakana-desktop-assistant_src_core___init__.py.23238adf63f7dc3ee2c284d7c034196de6cce721.4000.jsonl  .._sakana-desktop-assistant_src_core_assistant.py.aa3ab3e7f9113767e362e226ded7e6a36a876ce0.100.jsonl  .._sakana-desktop-assistant_src_core_assistant.py.aa3ab3e7f9113767e362e226ded7e6a36a876ce0.4000.jsonl  .._sakana-desktop-assistant_src_core_config.py.459937a8fbb661abf3af0c7d14b60ec160ebfef7.100.jsonl  .._sakana-desktop-assistant_src_core_config.py.459937a8fbb661abf3af0c7d14b60ec160ebfef7.4000.jsonl  .._sakana-desktop-assistant_src_core_llm_interface.py.77955c88978448890273a230a071ff5af9ea040d.100.jsonl  .._sakana-desktop-assistant_src_core_llm_interface.py.77955c88978448890273a230a071ff5af9ea040d.4000.jsonl  .._sakana-desktop-assistant_src_core_llm_interface_minimal.py.7c7ac3059e4c38c38f40e6f2a46201317a0b2014.100.jsonl  .._sakana-desktop-assistant_src_core_llm_interface_minimal.py.7c7ac3059e4c38c38f40e6f2a46201317a0b2014.4000.jsonl  .._sakana-desktop-assistant_src_delegation___init__.py.f03a8b2d115fb3a56587e60fe720de6224b2dc47.100.jsonl  .._sakana-desktop-assistant_src_delegation___init__.py.f03a8b2d115fb3a56587e60fe720de6224b2dc47.4000.jsonl  .._sakana-desktop-assistant_src_delegation_delegation_entry.py.e89de8d5caf5f64af6e2cabc4e7f4e95032514f8.100.jsonl  .._sakana-desktop-assistant_src_delegation_delegation_entry.py.e89de8d5caf5f64af6e2cabc4e7f4e95032514f8.4000.jsonl  .._sakana-desktop-assistant_src_execution___init__.py.e7641fafa672a6d1d28987a6801f663c94ceb847.100.jsonl  .._sakana-desktop-assistant_src_execution___init__.py.e7641fafa672a6d1d28987a6801f663c94ceb847.4000.jsonl  .._sakana-desktop-assistant_src_execution_sandbox_executor.py.cb8125df0065702bc27c8a9497864de936146f01.100.jsonl  .._sakana-desktop-assistant_src_execution_sandbox_executor.py.cb8125df0065702bc27c8a9497864de936146f01.4000.jsonl  .._sakana-desktop-assistant_src_learning___init__.py.939feed9cd6a1b9d57af467d72cae114244a2adf.100.jsonl  .._sakana-desktop-assistant_src_learning___init__.py.939feed9cd6a1b9d57af467d72cae114244a2adf.4000.jsonl  .._sakana-desktop-assistant_src_learning_behavior_evolution.py.456968d6e9cd208565a476a08df0b2b26b89cf34.100.jsonl  .._sakana-desktop-assistant_src_learning_behavior_evolution.py.456968d6e9cd208565a476a08df0b2b26b89cf34.4000.jsonl  .._sakana-desktop-assistant_src_learning_consciousness_field.py.df535dd1764a524060d21af67208b7d1479d6c99.100.jsonl  .._sakana-desktop-assistant_src_learning_consciousness_field.py.df535dd1764a524060d21af67208b7d1479d6c99.4000.jsonl  .._sakana-desktop-assistant_src_learning_evolution_triggers.py.be9db5cef10561912874afeb75aad2f7b4afc46d.100.jsonl  (+31 more)
.kilocode/: mcp.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIG_REFERENCE.md  ENV.md  FRONTEND_ARCHITECTURE.md  IMPROVEMENTS_2025.md  MAINTENANCE.md  SCRIPTS.md  c4_architecture.md  c4_quick_reference.md  mcmp_reporting_c4.md  mcmp_simulation.md  rag_query_prompt.md
enterprise_index/: docstore.json  index_store.json
experimerntal/: mcmp_chunking.py  mcmp_rag.py  streamlit_fungus.py
frontend/: ARCHITECTURE.md  REFACTORING_SUMMARY.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
tests/: README.md  conftest.py  example_documents.txt  selftest_fungus.py  test_chunking_system.py  test_collections.py  test_collections_standalone.py  test_document.txt  test_e2e.py  test_e2e_memory_agent.py  test_enterprise_rag_advanced.py  test_fungus_api.py  test_integration.py  test_langchain_memory_agent.py  test_mcmp.py  test_mcmp_simple.py  test_memory_integration.py  test_memory_manager_agent.py  test_ollama.py  test_path_resolution.py  test_performance.py
tools/: bench_fungus_params.py  bench_rag.py  rag.py  run_query_checks.py
(+130 files in other folders)
