[project]
name = "embeddinggemma"
version = "0.1.0"
description = "Multi-Agent Codebase Analysis using RAG and Mycelial Search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.7.0",
    "numpy>=1.21.0,<2.0",
    "pandas>=1.3.0,<2.0",
    "plotly>=5.0.0",
    "requests>=2.28.0",
    "scikit-learn>=1.0.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
]
